--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
-MONGO_URI= mongodb+srv://sticktoonxyz_db_user:Rt4xGCUS18ovAWMA@cluster0.c2kwzel.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb+srv://sticktoonxyz_db_user:Rt4xGCUS18ovAWMA@cluster0.c2kwzel.mongodb.net/?appName=Cluster0
 JWT_SECRET=sticktoon_secret
+GOOGLE_CLIENT_ID=1049182842994-ck7f4tdfou808vi856a5u43b5tb28nba.apps.googleusercontent.com
+
+EMAIL_USER=sticktoon.xyz@gmail.com
+EMAIL_PASS=savjccgaqzaamnua
